--- a/README.adoc
+++ b/README.adoc
@@ -195,13 +195,22 @@ Articles:
 
 * xref:bzl/docs/build_protocols.adoc[Build Protocols]
 * xref:bzl/docs/build_targets.adoc[Build Targets]
+* xref:bzl/docs/compilerlibs.adoc[Compiler-libs]
 * xref:bzl/docs/cc_toolchain_integration.adoc[CC Toolchain Integration]
 * xref:bzl/docs/configuration.adoc[Configuration]
+* xref:bzl/docs/debugging.adoc[Debugging]
 * xref:bzl/docs/diagnostics.adoc[Diagnostics]
+* xref:bzl/docs/libraries.adoc[Libraries & Archives]
 * xref:bzl/docs/output_groups.adoc[Output Groups]
 * xref:bzl/docs/rules.adoc[Rules]
+* xref:bzl/docs/performance.adoc[Performance]
+* xref:bzl/docs/preprocessing.adoc[Preprocessing]
 * xref:bzl/docs/queries.adoc[Queries]
-* xref:bzl/docs/terminology.adoc[Symbols & Terminology]
+* xref:bzl/docs/stdlib.adoc[Stdlib]
+* xref:bzl/docs/terminology.adoc[Terminology & Symbols]
+* xref:bzl/docs/testing.adoc[Testing]
+* xref:bzl/docs/verification.adoc[Verification]
+* xref:bzl/docs/workflows.adoc[Workflows]
 
 == Goals
 
